# parametric-sensor-manifold

./: .gitignore  README.md  pyproject.toml
.github/workflows/: cad-release.yml  lint-and-test.yml
docs/: README.md  design_process.md  resin_printer_comparison.md
parametric_sensor_manifold/: __init__.py  part1.py
parametric_sensor_manifold/utils/: config.py  export.py  viewer.py
